[package]
name = "sigalign-core"
version = "0.1.0"
edition = "2021"
authors = ["baku4 <bahkhun@gamil.com>"]
description = "A core crate for sigalign"

[dependencies]
num = "0.4.0"
num-traits = "0.2.15"
thiserror = "1.0.38"
ahash = "0.8.0"
byteorder = "1.4.3"
bytemuck = "1.13.0"
capwriter = "0.2.0"
serde = "1.0.152"
serde_json = "1.0.93"

[dependencies.lt-fm-index]
version = "0.7.0-alpha.2"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.lt-fm-index]
version = "0.7.0-alpha.2"
features = ["fastbwt"]

[features]
short_key = []