[package]
name = "sigalign-core"
version = "0.2.0"
edition = "2021"
authors = ["baku4 <bahkhun@gamil.com>"]
description = "A core crate for sigalign"
license = "MIT"

[dependencies]
num = "0.4.0"
thiserror = "1.0.38"
ahash = "0.8.11"
bytemuck = { version = "1.14.0", features = ["derive"] }
capwriter = "0.2.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

[features]
short_key = []