[package]
name = "sigalign-demo-bin"
version = "0.1.0"
authors = ["baku4 <bahkhun@gmail.com>"]
edition = "2018"
description = "Binary implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sigalign = { path = "../sigalign" }
anyhow = "1.0.44"
clap = "2.33.3"
