[package]
name = "sigalign-impl"
version = "0.2.0"
edition = "2021"
authors = ["baku4 <bahkhun@gamil.com>"]
description = "A crate for implementations for core"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sigalign-core = { version = "0.2.0", path = "../sigalign-core" }
sigalign-utils = { version = "0.2.0", path = "../sigalign-utils" }
thiserror = "1.0.38"
byteorder = "1.5.0"
capwriter = "0.2.0"

[dependencies.lt-fm-index]
version = "0.7.0-alpha.2"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.lt-fm-index]
version = "0.7.0-alpha.2"
features = ["fastbwt"]