[package]
name = "sigalign-py"
version = "0.1.0"
authors = ["baku4 <bahkhun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sigalign"
crate-type = ["cdylib"]

[dependencies]
sigalign = { path = "../sigalign" }
anyhow = "1.0.66"
serde = "1.0.127"
serde_json = "1.0.68"

[dependencies.pyo3]
version = "0.17.3"
features = ["extension-module", "abi3-py37"]