[package]
name = "sigalign-py"
version = "0.2.0"
authors = ["baku4 <bahkhun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sigalign"
crate-type = ["cdylib"]

[dependencies]
sigalign = { path = "../sigalign" }
serde = "1.0.164"
serde_json = "1.0.99"

[dependencies.pyo3]
version = "0.19.0"
features = ["extension-module", "abi3-py37"]