[package]
name = "sigalign-utils"
version = "0.2.0"
edition = "2021"
authors = ["baku4 <bahkhun@gamil.com>"]
description = "A crate for utils for core"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seq_io = "0.3.2"
flate2 = "1.0.28"
