[package]
name = "sigalign"
version = "0.4.0"
authors = ["baku4 <bahkhun@gamil.com>"]
edition = "2021"
rust-version = "1.65.0"
description = "A Similarity-Guided Alignment Algorithm"
readme = "../README.md"
repository = "https://github.com/baku4/sigalign/"
license = "MIT"
keywords = ["alignment", "nucleotide", "bioinformatics", "bio"]
categories = ["science"]

[dependencies]
sigalign-core = { version = "0.2.0", path = "../sigalign-core" }
sigalign-utils = { version = "0.2.0", path = "../sigalign-utils" }
sigalign-impl = { version = "0.2.0", path = "../sigalign-impl" }
thiserror = "1.0"
base64 = "0.21.5"
serde = "1.0.152"
serde_json = "1.0.93"
capwriter = "0.2.0"

[features]
short_key = ["sigalign-core/short_key"]
