[package]
name = "sigalign-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
sigalign = { path = "../sigalign", features = ["short_key"] }
sigalign_stable = { package = "sigalign", version = "0.2.0", features = ["four_dp"] }
lt-fm-index = "0.5.6"

anyhow = "1.0.65"
log = "0.4.17"
ahash = "0.8.0"
bincode = "2.0.0-rc.1"
rand = "0.8.5"
bio = "1.1.0"
faimm = "0.3.0"
env_logger = "0.9.1"

[dev-dependencies]

[features]
print = []