[package]
name = "sigalign-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
sigalign-core = { path = "../sigalign-core", features = ["short_key"] }
sigalign-utils = { path = "../sigalign-utils" }
sigalign-impl = { path = "../sigalign-impl" }
sigalign = { path = "../sigalign", features = ["short_key"] }
sigalign_stable = { package = "sigalign", version = "0.3.2", features = ["short_key"] }

lt-fm-index = "0.7.0-alpha.3"

anyhow = "1.0.65"
log = "0.4.17"
config = "0.14"
cargo_metadata = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

ahash = "0.8.0"
bincode = "2.0.0-rc.1"
rand = "0.8.5"
bio = "1.6"
faimm = "0.3.0"
env_logger = "0.9.1"
seq_io = "0.3.2"

[dev-dependencies]
itoa = "1.0.6"
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies.criterion]
version = "0.4"
features = ["html_reports"]

[[bench]]
name = "benchmark"
harness = false

[features]

[[bin]]
name = "generate_dp_results"
path = "src/bin/generate_dp_results.rs"
