[package]
name = "sigalign-read-mapper"
version = "0.1.0"
edition = "2021"

[dependencies]
sigalign-core = { path = "../../sigalign-core" }
sigalign-utils = { path = "../../sigalign-utils" }
sigalign-impl = { path = "../../sigalign-impl" }
sigalign = { path = "../../sigalign", features = ["short_key"] }

anyhow = "1.0.86"
clap = "4.5"
glob = "0.3.1"
