[package]
name = "sigalign-demo-aligner"
version = "0.1.0"
authors = ["baku4 <bahkhun@gmail.com>"]
edition = "2018"
description = "Binary implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sigalign = { path = "../../sigalign", features = ["short_key"] }
anyhow = "1.0.44"
clap = "3.0.12"
log = "0.4.14"
env_logger = "0.9.0"
