[package]
name = "sigalign-demo-aligner"
version = "0.1.0"
authors = ["baku4 <bahkhun@gmail.com>"]
edition = "2018"
description = "Binary implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sigalign = { path = "../../sigalign", features = ["short_key"] }
anyhow = "1.0.44"
clap = "4.0.26"
log = "0.4.14"
env_logger = "0.9.0"

[features]
default = []
# Change the alignment method
tsv = [] # Print TSV formatted output to stdout.
thread = [] # Align multiple query files using worker thread. Output is TSV to stdout
rc_qry = [] # Reverse complementary is handled at the query level. Output is TSV to stdout.
# Change the reference type
idx_fa = [] # Use indexed fasta as sequence storage.
