[package]
name = "sigalign-demo-binary"
version = "0.1.0"
authors = ["baku4 <bahkhun@gmail.com>"]
edition = "2018"
description = "Binary implementation"

[dependencies]
sigalign-core = { path = "../../sigalign-core" }
sigalign-utils = { path = "../../sigalign-utils" }
sigalign-impl = { path = "../../sigalign-impl" }
sigalign = { path = "../../sigalign", features = ["short_key"] }
anyhow = "1.0.75"
clap = "4.4.11"
log = "0.4.20"
env_logger = "0.10.1"
itoa = "1.0.10"
glob = "0.3.1"

[features]
default = []
safe_guard = []
chain = []