[package]
name = "sigalign-demo-wasm"
version = "0.1.0"
authors = ["baku4 <bahkhun@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
sigalign = { path = "../../sigalign", features = [] }
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
anyhow = "1.0.44"
rand = "0.8.5"
serde = "1.0.127"
serde_json = "1.0.68"
getrandom = { version = "0.2.9", features = ["js"] }
ahash = "0.8.3"
