[package]
name = "sigalign-demo-wasm"
version = "0.1.0"
authors = ["baku4 <bahkhun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sigalign = { path = "../../sigalign" }
wasm-bindgen = "0.2.78"
anyhow = "1.0.44"